[package]
name = "laterbase"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.19", features = ["macros"] }
serde = { version = "1.0.171", features = ["derive"] }
ulid = { version = "1.0.0", features = ["serde"] }
uuid = { version = "1.4.0", features = ["v4"] }

[dev-dependencies]
bincode = "1.3.3"
hyper = { version = "0.14", features = ["full"] }
pretty_assertions = "1.4.0"
proptest = "1.0.0"
serde_json = "1.0.103"
test-strategy = "0.3.1"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
